<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2010 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="match_parent"
  android:layout_width="match_parent"
  android:orientation="vertical" >
  <ScrollView style="@style/ScrollView.WithBottomButtons" >
    <LinearLayout
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:orientation="vertical"
      android:padding="8dp" >

       <TextView
           android:id="@+id/bike_edit_title"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/bike_edit"
           android:textAppearance="?android:attr/textAppearanceLarge" />

      <TextView
        android:text="@string/generic_name"
        style="@style/EditLabel.WithPaddingTop" />
      <EditText
        android:hint="@string/generic_name"
        android:id="@+id/bike_edit_name"
        android:imeOptions="actionNext"
        style="@style/EditNameUser" />
      <TextView
        android:id="@+id/bike_edit_weight_label"
        android:text="@string/generic_weight"
        style="@style/EditLabel.WithPaddingTop" />
      <EditText
        android:hint="@string/generic_weight"
        android:id="@+id/bike_edit_weight"
        android:imeOptions="actionDone"
        style="@style/EditWeightUser" />
      
          <CheckBox
      android:id="@+id/bike_shared_check_box"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:layout_width="match_parent"
      android:text="@string/bike_shared_checkbox_text"
      style="@style/TextMedium" />
    </LinearLayout>
  </ScrollView>
  <LinearLayout style="@style/BottomButtonBar" >
    <include layout="@layout/generic_edit_buttons" />
  </LinearLayout>
</LinearLayout>